RESOLVED FIXED 189475
[iOS] Unable to change the value of select elements while preserving focus state
https://bugs.webkit.org/show_bug.cgi?id=189475
Summary [iOS] Unable to change the value of select elements while preserving focus state
Wenson Hsieh
Reported 2018-09-10 11:30:06 PDT
Attachments
Patch (26.30 KB, patch)
2018-09-10 14:51 PDT, Wenson Hsieh
no flags
Patch for landing (26.61 KB, patch)
2018-09-10 16:30 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-09-10 14:51:50 PDT
Tim Horton
Comment 2 2018-09-10 16:01:04 PDT
Comment on attachment 349332 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=349332&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:458 > + // However, unlike active focus state, it may be safely reset to 0. Probably need to define "safely" here. "Without impact to existing API contracts?"
Wenson Hsieh
Comment 3 2018-09-10 16:08:37 PDT
Comment on attachment 349332 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=349332&action=review >> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:458 >> + // However, unlike active focus state, it may be safely reset to 0. > > Probably need to define "safely" here. "Without impact to existing API contracts?" That's right — it's part "without impact to existing behavior of -_retainActiveFocusedState", and also part "able to be reset to 0 at any time" (with future calls to decrement the counter being noops). I'll clarify this in the comment.
Wenson Hsieh
Comment 4 2018-09-10 16:30:40 PDT
Created attachment 349354 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-09-10 17:20:05 PDT
The commit-queue encountered the following flaky tests while processing attachment 349354 [details]: The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2018-09-10 17:20:12 PDT
The commit-queue encountered the following flaky tests while processing attachment 349354 [details]: imported/w3c/web-platform-tests/xhr/access-control-and-redirects.htm bug 189489 (author: youennf@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2018-09-10 18:18:12 PDT
Comment on attachment 349354 [details] Patch for landing Clearing flags on attachment: 349354 Committed r235878: <https://trac.webkit.org/changeset/235878>
WebKit Commit Bot
Comment 8 2018-09-10 18:18:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.