Tools/TestWebKitAPI/cocoa/TestWKWebView.h
@@ -32,6 +32,7 @@
 
 #if PLATFORM(IOS)
 @class _WKActivatedElementInfo;
+@protocol UITextInputMultiDocument;
 #endif
 
 @interface WKWebView (AdditionalDeclarations)
@@ -63,7 +64,7 @@
 
 #if PLATFORM(IOS)
 @interface TestWKWebView (IOSOnly)
-@property (nonatomic, readonly) UIView <UITextInput> *textInputContentView;
+@property (nonatomic, readonly) UIView <UITextInput, UITextInputMultiDocument> *textInputContentView;
 @property (nonatomic, readonly) RetainPtr<NSArray> selectionRectsAfterPresentationUpdate;
 @property (nonatomic, readonly) CGRect caretViewRectInContentCoordinates;
 @property (nonatomic, readonly) NSArray<NSValue *> *selectionViewRectsInContentCoordinates;
